--- a/package.json
+++ b/package.json
@@ -16,14 +16,24 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "flash": "^1.1.0",
     "helmet": "^3.23.3",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.21",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
     "pug": "^3.0.0"
   }
